# UCNS3D

./: .gitignore  CMakeLists.txt  Dockerfile  FILES.md  Makefile  PARAMETERS.md  PARAMETERS_README.txt  README.md  README.txt  README_CATALYST.txt  README_MRF  README_MRF.md  README_TESTS.txt  README_UCNS3D.txt  README_UCNS3D_with_CATALYST.txt  TESTS.md  bc_p.f90  communications.f90  declarations.f90  der_r.f90  flux_p.f90  gradients.f90  implicit_fluxes.f90  implicit_time.f90  instructions.txt  memory.f90  read_me2  riemann.f90  rotational_periodic_readme.md  translate.f90
BENCHMARKING/MESHES/TGV/GRID2/: GRID.bnd
BENCHMARKING/SAMPLE_RUN/: GRID.bnd  GRID.vrt  STATS_MPI_4_THREADS_4.txt  fort.100  history.txt  instructions.txt  nice_image_of_initial_condition.pvsm
CODE/: CMakeLists.txt  CMakeLists_Intel.txt  FECxxAdaptor.cxx  FEFortranAdaptor.f90  Makefile  Makefile.common  Makefile_intel  Makefile_mac  README.txt  advance.mod  basis.f90  basis.mod  bc_p.f90  boundary.mod  communications.f90  communications.mod  declaration.mod  declarations.f90  declarations.lst  der_r.f90  derivatives.mod  dg_functions.f90  flow_operations.f90  flow_operations.mod  flux_p.f90  fluxes.mod  fluxes_v.mod  gradients.f90  gradients.mod  grid_p.f90  grid_t.f90  history.txt  implicit_fluxes.f90  implicit_fluxes.mod  implicit_time.f90  implicit_time.mod  init_p.f90  initialisation.mod  instructions.txt  io.f90  (+33 more)
Catalyst_Example/: CMakeLists.txt
Catalyst_Example/Build Documentation/: build_documentation_Jason.txt  build_documentation_generic.txt
Catalyst_Example/Fortran90FullExample/: CMakeLists.txt  FEDriver.f90
Catalyst_Example/Fortran90FullExample/SampleScripts/: coproc.py
Catalyst_Example/UCNS3D_obj/: GRID.bnd  GRID.cel  GRID.vrt  coproc.py
MacOS/: Makefile  Makefile.common  libmetis.dylib  libparmetis.dylib  libtecio.dylib  readme.txt
PROTOTYPE/CPU_IMPL/: Makefile  prototype_cpu.f90  submit_job.cirrus_gnu
PROTOTYPE/GPU_IMPL/: archer2_no_unified_mem.slurm  prototype_gpu1.f90
PROTOTYPE/cpu_impl/: Makefile  archer2_gnu.slurm  archer2gpu.job  archer2modules.sh  cirrus_gnu.slurm  prototype_cpu.f90  prototype_gpu.f90  submit_job.cirrus_gnu
PROTOTYPE/gpu_impl/: Makefile  archer2_cce.slurm  cirrus_nvhpc.slurm  cpu_impl.out  gpu_impl.out  gpu_impl_matmul.out  gpu_impl_matmul_no_dtypes.out  prototype_gpu.f90  prototype_gpu_1.acc.s  prototype_gpu_matmul.f90  prototype_gpu_matmul_gpu_touch_first.f90  prototype_gpu_matmul_no_dtypes.f90  prototype_gpu_matmul_no_dtypes_gpu_touch_first.f90
PROTOTYPE/gpu_impl/cirrus_times/: prototypetest_Ne_2e6.out  prototypetest_matmul_Ne_2e6.out  prototypetest_matmul_gpu_touch_first_Ne_2e6.out  prototypetest_matmul_no_dtypes_Ne_2e6.out
PROTOTYPE_TESTS/prototype_cpu/: Makefile  archer2.slurm  prototype_cpu.f90
PROTOTYPE_TESTS/prototype_gpu/: Makefile  archer2.slurm  prototype_gpu1.f90
SCRIPTS/: ARCHER_IB.pbs  ARCHER_KNL.pbs
TRANSLATORS/: README.txt  UGRID2NAT.f90
docs/: README_MRF.md  inputs.md  outputs.md  tests.md  tutorial.md
scripts/: XEON_PHI_KNL.peta4-knl  archer2.slurm  delta2.sub
scripts/submission-script/: ARCHER_KNL.pbs  DELTA_BW.pbs  archer2.slurm  archer2_gpu_nodes.slurm
scripts/translators/: README.md  UGRID2NAT.f90
src/: Makefile  Makefile_common  Makefile_docker  Makefile_docker_no_tecplot  Makefile_shared_no_tecplot  basis.f90  bc_p.f90  boundf.f90  communications.f90  declarations.f90  der_r.f90  dg_functions.f90  flow_operations.f90  flux_p.f90  flux_p_old.f90  flux_pv.f90  gradients.f90  grid_MovingMesh.f90  grid_p.f90  grid_t.f90  hybridCWENO_MOOD.f90  implicit_fluxes.f90  implicit_time.f90  init_p.f90  io.f90  local_pt.f90  main.f90  matrix.f90  memory.f90  mesh_movement.f90  mood.f90  mpi_p.f90  mpmetis  parameters.f90  parts.f90  prestore.f90  prestore_MovingMesh.f90  profile.f90  real_gas_diffusion.f90  reconstruct_p.f90  (+6 more)
tests/: execute-tests.sh  run-docker-test.sh
tests/mrf/: README_MRF.md
tests/mrf/caradonna_test/: Caradonna_Readme.md  cp.eqn  grid.msh
tests/mrf/caradonna_test/Results/: GRID.plt  OUT_1000.plt  SURF.plt  SURF_1000.plt  cp.eqn  exp_8degrees_2540RPM_096rr.txt  history.txt
tests/mrf/psp_test/: PSP_Readme.md
tests/mrf/psp_test/results/: FoMxCt.lay  FoMxCt.lpk  FoMxCt.txt  cp_psp.eqn  cp_psp_torque1.eqn
